--- a/drag.html
+++ b/drag.html
@@ -1,54 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-  #container{
-    width: 500px;
-    height: 500px;
-    background-color: #f0f0f0;
-  }
-  .box{
-    width: 100px;
-    height: 100px;
-    background-color: #fff;
-  }
-  .circle{
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    top: 50%;
-    left: 50%;
-    border-radius: 50%;
-    background-color: lightgreen;
-    opacity: 0.6;
-  }
-  .line{
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-  }
-  </style>
+<style>
+#container {
+  width: 500px;
+  height: 500px;
+  margin: 100px auto;
+  background-color: #f0f0f0;
+  border-radius: 20px;
+}
+
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: #f4f;
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  left: 100px;
+  border-radius: 50%;
+  background-color: lightgreen;
+  opacity: 0.6;
+}
+
+.line {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+}
+</style>
 </head>
+
 <body>
-  <div id="container">
-          <div class="box">
+<div id="container">
+  <div class="box"></div>
   <div class="circle">
     <div class="line"></div>
   </div>
-  </div>
-
-  </div>
-  <script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_2.0.1_min.js"></script>
-  <script src="https://s0.2mdn.net/ads/studio/cached_libs/draggable_2.0.1_min.js"></script>
-  <script>
-  Draggable.create(".box", {type:"x,y", edgeResistance:0.65, bounds:"#container", throwProps:true});
-  Draggable.create(".circle", {type:"rotation", edgeResistance:0.65, bounds:"#container", throwProps:true});
-  </script>
+</div>
+<script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_2.0.1_min.js"></script>
+<script src="https://s0.2mdn.net/ads/studio/cached_libs/draggable_2.0.1_min.js"></script>
+<script>
+  Draggable.create(".box", {
+    type: "x,y",
+    edgeResistance: 0.65,
+    bounds: "#container",
+    throwProps: true,
+    ease: Bounce.easeInOut
+  });
+  Draggable.create(".circle", {
+    type: "x,y",
+    edgeResistance: 0.65,
+    bounds: "#container",
+    throwProps: true,
+    onDragEnd: function(e) {
+      //see if the target overlaps with the element with ID "element2"
+      if (this.hitTest(".box", 20)) {
+        //do stuff
+        TweenMax.to('.circle', 1, {
+          rotation: 360,
+          repeat: -1,
+          ease: Power0.easeNone
+        })
+      } else {
+        TweenMax.to('.circle', 1, {
+          rotation: 0,
+          repeat: -1,
+          ease: Power0.easeNone
+        })
+      }
+    }
+  });
+</script>
 </body>
+
 </html>
