--- a/drag.html
+++ b/drag.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="sal/sal.css"></link>
 <style>
 #container {
   width: 500px;
@@ -19,15 +20,17 @@
 .box {
   width: 100px;
   height: 100px;
-  background-color: #f4f;
+  background-color: #f00;
+  background-blend-mode: multiply;
 }
 
 .line {
   position: absolute;
   top: 50%;
   width: 100%;
-  height: 2px;
-  background-color: #000;
+  height: 10px;
+  background-color: #00f;
+  background-blend-mode: multiply;
 }
 
 .circle {
@@ -35,22 +38,41 @@
   height: 100px;
   left: 100px;
   border-radius: 50%;
-  background-color: lightgreen;
-  opacity: 0.6;
+  background-color: #0f0;
+  opacity: 1;
+  background-blend-mode: multiply;
+}
+
+#fader{
+  margin-top: 1200px;
+  margin-bottom: 500px;
+  width: 100px;
+  height: 100px;
+  background-color: #082868;
 }
 
 </style>
 </head>
 
 <body>
+
 <div id="container">
-  <div class="box"></div>
   <div class="circle">
+      <div class="box"></div>
     <div class="line"></div>
   </div>
 </div>
+
+<div id="fader"
+data-sal="slide-left"
+data-sal-delay="500"
+data-sal-easing="ease-out-bounce">
+
+</div>
+
 <script src="https://s0.2mdn.net/ads/studio/cached_libs/tweenmax_2.0.1_min.js"></script>
 <script src="https://s0.2mdn.net/ads/studio/cached_libs/draggable_2.0.1_min.js"></script>
+<script src="sal/sal.js"></script>
 <script>
   Draggable.create(".box", {
     type: "x,y",
@@ -94,6 +116,11 @@
       console.log("onClick");
     }
   });
+
+// sal
+
+sal();
+
 </script>
 </body>
 
